# django-cbv-htmx

./: .gitignore  Pipfile
cbvhtmx/: apps.py  form_widgets.py  mixins.py  services.py  tools.py
cbvhtmx/templatetags/: query_extras.py
django-cbv-htmx/: LICENSE  README.md  setup.cfg
django-cbv-htmx/cbvhtmx/: apps.py  form_widgets.py  services.py  tools.py
django-cbv-htmx/cbvhtmx/templatetags/: query_extras.py
examples/: htmx_detail_template.html  htmx_list_template.html  views.py
sample_project/: db.sqlite3
sample_project/sample_app/: models.py
sample_project/sample_app/migrations/: 0001_initial.py
sample_project/sample_project/: asgi.py  settings.py  urls.py  wsgi.py
sample_project/templates/: base.html
