[metadata]
name = django-cbv-htmx
version = 0.0.4
author = Jesse Hunt
author_email = jesse@bembel-webdesign.de
description = Django helpers for using CBVs with HTMX
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mixmash11/django-cbv-htmx
project_urls =
    Bug Tracker = https://github.com/mixmash11/django-cbv-htmx/issues
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2